Start to move to a separate room lobby view

--- a/src/main/java/react4j/vchat/public/common/css/index.css
+++ b/src/main/java/react4j/vchat/public/common/css/index.css
@@ -1,5 +1,5 @@
 body, html {
-  background-color: #000000;
+  background-color: #FFFFFF;
   padding: 0;
   margin: 0;
   font-family: sans-serif;
@@ -86,18 +86,6 @@ body, html {
   position: absolute;
   bottom: 24px;
   left: 24px;
-}
-
-.control-btn {
-  position: relative;
-  margin-right: 24px;
-  outline: none;
-  border: none;
-  box-shadow: 1px 1px 8px black;
-  border-radius: 50%;
-  background-color: #252839;
-  height: 64px;
-  width: 64px;
 }
 
 @media screen and (max-width: 480px) {
