--- a/src/main/java/react4j/vchat/public/common/css/vchat2.css
+++ b/src/main/java/react4j/vchat/public/common/css/vchat2.css
@@ -130,7 +130,7 @@ input[type=text] {
 }
 
 .recent-room {
-  color: #4285F4;
+  color: hsl(217, 89%, 61%);
   margin: 1ex 1em;
 }
 
@@ -179,7 +179,7 @@ input[type=text] {
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
-  background-color: #4285F4;
+  background-color: hsl(217, 89%, 61%);
   border: none;
   color: white;
   font-size: 0.8em;
