Temporarily comment out classes

--- a/src/main/java/react4j/vchat/public/common/css/vchat2.css
+++ b/src/main/java/react4j/vchat/public/common/css/vchat2.css
@@ -14,10 +14,11 @@ button {
   }
 }
 
-input:focus,
-button:focus {
-  outline: 0;
-}
+/** Need to add this back for video controls */
+/*input:focus,*/
+/*button:focus {*/
+/*  outline: 0;*/
+/*}*/
 
 input[type=text] {
   border: none;
