Group and style button group

--- a/src/main/java/react4j/vchat/public/common/css/vchat2.css
+++ b/src/main/java/react4j/vchat/public/common/css/vchat2.css
@@ -33,6 +33,12 @@ input[type=text] {
   display: block;
 }
 
+.roomSelectButtons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .home {
   display: flex;
   justify-content: center;
