--- a/src/main/java/react4j/vchat/public/common/css/vchat2.css
+++ b/src/main/java/react4j/vchat/public/common/css/vchat2.css
@@ -26,7 +26,7 @@ button {
   font-size: 1em;
   background-color: transparent;
   color: #fff;
-  padding: .4em 0;
+  padding: .4em;
   margin: 2ex 0;
   width: 100%;
   max-width: 12em;
