--- a/src/main/java/react4j/vchat/public/common/css/vchat2.css
+++ b/src/main/java/react4j/vchat/public/common/css/vchat2.css
@@ -20,6 +20,11 @@ button {
 /*  outline: 0;*/
 /*}*/
 
+.roomCodeInput:focus {
+  outline: 0;
+  border-bottom-color: hsl(240, 2%, 80%);
+}
+
 .roomCodeInput {
   border: none;
   border-bottom: solid 2px hsl(240, 2%, 30%);
