Make it possible to set class and remove constant input to video view and start using new view

--- a/src/main/java/react4j/vchat/public/common/css/vchat2.css
+++ b/src/main/java/react4j/vchat/public/common/css/vchat2.css
@@ -36,8 +36,7 @@ button {
   height: 100%;
 }
 
-/* We don't have a class on video as it was painful to do without a factory for element */
-.active-video video {
+.active-video-element {
   height: 100%;
 
   /* Flip it horizontally so it feels right when looking at yourself */
