Start rendering remote video streams

--- a/src/main/java/react4j/vchat/public/common/css/vchat2.css
+++ b/src/main/java/react4j/vchat/public/common/css/vchat2.css
@@ -30,6 +30,10 @@ button {
   align-self: stretch;
 }
 
+.video-list-item {
+  width: 100%;
+}
+
 .active-video {
   align-self: stretch;
   flex-grow: 1;
