--- a/src/main/java/react4j/vchat/public/common/css/vchat2.css
+++ b/src/main/java/react4j/vchat/public/common/css/vchat2.css
@@ -32,6 +32,8 @@ button {
 
 .video-list-item {
   width: 100%;
+  /* Flip it horizontally so it feels right when looking at yourself */
+  transform: scale(-1, 1);
 }
 
 .active-video-wrapper {
