--- a/src/main/java/react4j/vchat/public/common/css/vchat2.css
+++ b/src/main/java/react4j/vchat/public/common/css/vchat2.css
@@ -66,6 +66,12 @@ button {
   opacity: 0.5;
 }
 
+
+.control-btn img {
+  width: 80%;
+  height: 100%;
+}
+
 .control-btn:hover {
   opacity: 0.8;
 }
